--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -314,6 +314,10 @@ button {
   height: 70vh;
   border: 2px solid rgb(46, 46, 46);
 }
+#accolades .awards {
+  display: flex;
+  flex: row;
+}
 #accolades .award {
   max-width: 100%;
   transition: all ease 0.5s;
@@ -321,6 +325,20 @@ button {
 }
 #accolades .award:hover {
   transform: scale(1.1);
+}
+
+.horizontalscrollwrapper {
+  width: 100%;
+}
+.horizontalscrollwrapper .horizontalscroll {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.horizontalscrollwrapper .horizontalscroll h2 {
+  text-align: left;
+  font-size: 10rem;
+  padding: 10rem;
 }
 
 .spacemaker {
