--- a/wp-content/themes/johns/styles/_main.scss
+++ b/wp-content/themes/johns/styles/_main.scss
@@ -9,6 +9,7 @@
 body {
     background-color: $mainbackground;
     overflow-x: hidden;
+
     // cursor: url(/img/porkpointer.webp) 16 16, auto;
     img {
         max-width: 100%;
@@ -142,56 +143,56 @@ button {
     }
 
 
-.front {
-    transform: translateZ(100px);
-}
+    .front {
+        transform: translateZ(100px);
+    }
 
-.back {
-    transform: translateZ(-100px) rotateY(180deg);
-}
+    .back {
+        transform: translateZ(-100px) rotateY(180deg);
+    }
 
-.left {
-    transform: translateX(-100px) rotateY(-90deg);
-}
+    .left {
+        transform: translateX(-100px) rotateY(-90deg);
+    }
 
-.right {
-    transform: translateX(100px) rotateY(90deg);
-}
+    .right {
+        transform: translateX(100px) rotateY(90deg);
+    }
 
-.top {
-    transform: translateY(-100px) rotateX(90deg);
-}
+    .top {
+        transform: translateY(-100px) rotateX(90deg);
+    }
 
-.bottom {
-    transform: translateY(100px) rotateX(-90deg);
-}
+    .bottom {
+        transform: translateY(100px) rotateX(-90deg);
+    }
 
-.line{
-    border: 2px solid black;
-    height: 200px;
-    rotate: 45deg;
-    animation: linespin 5s linear infinite forwards;
-}
+    .line {
+        border: 2px solid black;
+        height: 200px;
+        rotate: 45deg;
+        animation: linespin 5s linear infinite forwards;
+    }
 
-.line1{
-    border: 2px solid $secondarycolor;
-    height: 50px;
-transform: translateX(-15px) translateY(-10px) rotate(45deg);
-}
+    .line1 {
+        border: 2px solid $secondarycolor;
+        height: 50px;
+        transform: translateX(-15px) translateY(-10px) rotate(45deg);
+    }
 
-.line2{
-    border: 2px solid $secondarycolor;
-    height: 50px;
-    transform: translateX(15px) translateY(-10px) rotate(-45deg);
-}
+    .line2 {
+        border: 2px solid $secondarycolor;
+        height: 50px;
+        transform: translateX(15px) translateY(-10px) rotate(-45deg);
+    }
 
-.line3{
-    border: 2px solid $secondarycolor;
-    height: 70px;
+    .line3 {
+        border: 2px solid $secondarycolor;
+        height: 70px;
 
-    transform: translateY(10px) translateX(-5px) rotate(90deg);    
+        transform: translateY(10px) translateX(-5px) rotate(90deg);
 
-}
+    }
 }
 
 
@@ -295,10 +296,11 @@ transform: translateX(-15px) translateY(-10px) rotate(45deg);
     align-items: center;
 }
 
-#star{
+#star {
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
     animation: glow 1.5s ease-in-out infinite alternate;
 }
+
 .progress-bar {
     color: red;
     height: 5px;
@@ -368,6 +370,11 @@ transform: translateX(-15px) translateY(-10px) rotate(45deg);
     height: 70vh;
     border: 2px solid $secondarycolor;
 
+    .awards {
+        display: flex;
+        flex: row;
+    }
+
     .award {
         max-width: 100%;
         transition: all ease 0.5s;
@@ -382,11 +389,30 @@ transform: translateX(-15px) translateY(-10px) rotate(45deg);
 
 }
 
-.spacemaker{
+
+.horizontalscrollwrapper {
+    width: 100%;
+
+    .horizontalscroll {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+
+
+        h2 {
+            text-align: left;
+            font-size: 10rem;
+            padding: 10rem;
+        }
+    }
+}
+
+
+.spacemaker {
     height: 50vh;
 }
 
-.windowwrapper{
+.windowwrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -394,11 +420,12 @@ transform: translateX(-15px) translateY(-10px) rotate(45deg);
     width: 100vw;
     height: 100ch;
     background-color: $secondarycolor;
-.window{
-    border: 10px solid $creamcolor;
-width: 10vw;
-height: 10vh;
-}
+
+    .window {
+        border: 10px solid $creamcolor;
+        width: 10vw;
+        height: 10vh;
+    }
 }
 
 .post {
@@ -432,7 +459,7 @@ height: 10vh;
     height: 60vh;
 }
 
-.square{
+.square {
     display: flex;
     justify-content: center;
     width: 200px;
@@ -440,8 +467,8 @@ height: 10vh;
     background-color: $creamcolor;
 }
 
-footer{
-height: 40vh;
+footer {
+    height: 40vh;
 }
 
 // ---------------------------------------------------------------------------------------------------
@@ -517,12 +544,13 @@ height: 40vh;
 
 @keyframes glow {
     0% {
-      text-shadow: 0 0 5px rgba(153, 5, 5, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
+        text-shadow: 0 0 5px rgba(153, 5, 5, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
     }
+
     100% {
-      text-shadow: 0 0 20px rgba(255, 0, 0, 0.7), 0 0 30px rgba(255, 255, 255, 0.5);
+        text-shadow: 0 0 20px rgba(255, 0, 0, 0.7), 0 0 30px rgba(255, 255, 255, 0.5);
     }
-  }
+}
 
 
 
