--- a/wp-content/themes/johns/styles/_fontandcolors.scss
+++ b/wp-content/themes/johns/styles/_fontandcolors.scss
@@ -1,7 +1,12 @@
 $mainbackground: rgb(230, 104, 82);
 
+$ligtermainbackground: rgb(235, 107, 84); 
+
 $secondarycolor: rgb(46, 46, 46);
 
 $mainfont: 'arial black';
 
 $creamcolor: rgb(233, 216, 191);
+
+$gold: #D9B343
+
