--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -27,6 +27,7 @@ body img {
   -webkit-backdrop-filter: blur(0.5px);
           backdrop-filter: blur(0.5px);
   pointer-events: none;
+  z-index: 99999;
 }
 #cursor #cursor-wrapper {
   position: fixed;
@@ -37,6 +38,7 @@ body img {
   -webkit-backdrop-filter: blur(8px);
           backdrop-filter: blur(8px);
   pointer-events: none;
+  z-index: 99999;
 }
 
 h1,
@@ -44,6 +46,8 @@ h2,
 h3,
 a,
 p,
+li,
+ul,
 button {
   font-family: "arial black";
   color: rgb(46, 46, 46);
@@ -69,21 +73,7 @@ nav ul {
   list-style: none;
   z-index: 999999;
 }
-nav a {
-  font-size: 1rem;
-  border-radius: 5px;
-  color: rgb(230, 104, 82);
-  padding: 5px;
-  border: none;
-  text-decoration: underline;
-}
-
-.nav-wrapper {
-  position: sticky;
-  top: 0;
-}
-
-button {
+nav ul button {
   font-size: 1rem;
   cursor: pointer;
   border-radius: 5px;
@@ -92,6 +82,22 @@ button {
   padding: 5px;
   border: none;
   text-decoration: underline;
+}
+nav a {
+  font-size: 1rem;
+  border-radius: 5px;
+  color: rgb(230, 104, 82);
+  padding: 5px;
+  border: none;
+  text-decoration: underline;
+}
+nav a:hover {
+  transform: scale(1.1);
+}
+
+.nav-wrapper {
+  position: sticky;
+  top: 0;
 }
 
 .container {
@@ -169,6 +175,12 @@ button {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.end {
+  font-family: "arial black";
+  font-size: 10rem;
+  color: rgb(46, 46, 46);
 }
 
 #starttext {
@@ -259,6 +271,14 @@ button {
 }
 
 /* -------------------------3D-LABORATORY------------------------------- */
+.perspectivewrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  perspective: 500px;
+}
+
 #perspectiveattempt {
   display: flex;
   justify-content: center;
@@ -266,6 +286,17 @@ button {
   perspective: 1000px;
   width: 99vw;
   max-width: 100%;
+}
+
+.connector {
+  display: flex;
+  flex-direction: row;
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-2.jpg);
+  background-position: center;
+  height: 10vh;
+  width: 30vw;
+  transform: rotateX(40deg);
+  transform-origin: center top;
 }
 
 #right,
@@ -277,20 +308,34 @@ button {
   text-align: left;
   border: 4px solid rgb(46, 46, 46);
   border-left: none;
+  padding: 1rem;
+  color: rgb(46, 46, 46);
 }
 
 #right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transform: rotateY(-45deg);
   transform-origin: center left;
   border: 4px solid rgb(46, 46, 46);
   border-left: none;
+  text-align: center;
+  font-size: 2rem;
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesign.jpg);
 }
 
 #left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transform: rotateY(45deg);
   transform-origin: center right;
   border: 4px solid rgb(46, 46, 46);
   border-left: none;
+  text-align: center;
+  font-size: 2rem;
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignLeft.jpg);
 }
 
 #designbar,
@@ -308,22 +353,22 @@ button {
 }
 
 #accolades {
-  display: grid;
-  grid-template-columns: auto auto;
-  margin: 0 30vw;
-  height: 70vh;
-  border: 2px solid rgb(46, 46, 46);
-}
-#accolades .awards {
   display: flex;
-  flex: row;
-}
-#accolades .award {
-  max-width: 100%;
-  transition: all ease 0.5s;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 30vw;
   padding: 1rem;
+  border: 4px solid rgb(46, 46, 46);
+  perspective: 500px;
+  margin-top: -2.5rem;
 }
-#accolades .award:hover {
+#accolades .awards li {
+  transition: all 0.5s ease;
+  list-style-type: none;
+  font-size: 1.5rem;
+}
+#accolades .awards li:hover {
   transform: scale(1.1);
 }
 
@@ -367,6 +412,9 @@ button {
   align-items: center;
   flex-direction: column;
 }
+.post img {
+  transform: scale(0.5);
+}
 .post h2,
 .post p,
 .post a {
@@ -380,23 +428,79 @@ button {
 
 #endingdesign {
   background-position: center;
-  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/BottomDesignnoWidth.jpg);
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/resized.jpg);
   background-repeat: no-repeat;
-  height: 60vh;
+  height: 30vh;
 }
 
-.square {
-  display: flex;
-  justify-content: center;
-  width: 200px;
-  height: 200px;
-  background-color: rgb(233, 216, 191);
+.repsonsivehelper {
+  display: inherit;
+}
+
+.outerring1 {
+  width: 10vh;
+  height: 10vh;
+  border-radius: 50%;
+  border-left: 3px solid black;
+}
+
+.outerring2 {
+  width: 10vh;
+  height: 10vh;
+  border-radius: 50%;
+  border-right: 3px solid black;
 }
 
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40vh;
 }
+footer button {
+  text-align: center;
+  height: 15vh;
+  width: 15vh;
+  border-radius: 50%;
+  transition: all 1s ease;
+  animation: none;
+  background-color: rgb(46, 46, 46);
+  z-index: 99999;
+  background-size: 500% 500%;
+}
+footer button a {
+  color: rgb(233, 216, 191);
+  text-decoration: none;
+  z-index: 99999;
+}
+footer button:hover {
+  animation: hirebutton 1s ease forwards;
+}
 
+@keyframes hirebutton {
+  from {
+    transform: scale(1);
+    color: rgb(46, 46, 46);
+    border-color: rgb(46, 46, 46);
+    background-position: 0% 0%;
+  }
+  to {
+    color: #D9B343;
+    transform: scale(1.5);
+    background-position: 100% 100%;
+  }
+}
+@keyframes slide {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
 @keyframes spin {
   from {
     transform: rotateY(0deg);
@@ -405,17 +509,22 @@ footer {
     transform: rotateY(360deg);
   }
 }
-@keyframes linespin {
-  to {
-    transform: rotate(360deg);
-  }
-}
 @keyframes glow {
   0% {
     text-shadow: 0 0 5px rgba(153, 5, 5, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
   }
   100% {
     text-shadow: 0 0 20px rgba(255, 0, 0, 0.7), 0 0 30px rgba(255, 255, 255, 0.5);
+  }
+}
+@keyframes outerringanim {
+  from {
+    transform: scale(1);
+    border-color: rgb(46, 46, 46);
+  }
+  to {
+    transform: scale(2);
+    border-color: #D9B343;
   }
 }
 @media (max-width: 768px) {
@@ -428,5 +537,8 @@ footer {
   }
   h1 {
     font-size: 20vw;
+  }
+  .repsonsivehelper {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
