--- a/wp-content/themes/johns/styles/_main.scss
+++ b/wp-content/themes/johns/styles/_main.scss
@@ -10,7 +10,6 @@ body {
     background-color: $mainbackground;
     overflow-x: hidden;
 
-    // cursor: url(/img/porkpointer.webp) 16 16, auto;
     img {
         max-width: 100%;
     }
@@ -30,6 +29,7 @@ body {
     background-color: rgba(255, 255, 255, 0.004);
     backdrop-filter: blur(0.5px);
     pointer-events: none;
+    z-index: 99999;
 
     #cursor-wrapper {
         position: fixed;
@@ -39,6 +39,7 @@ body {
         background-color: rgba(255, 255, 255, 0.08);
         backdrop-filter: blur(8px);
         pointer-events: none;
+        z-index: 99999;
     }
 }
 
@@ -49,6 +50,8 @@ h2,
 h3,
 a,
 p,
+li,
+ul,
 button {
     font-family: $mainfont;
     color: $secondarycolor;
@@ -76,6 +79,18 @@ nav {
         text-decoration: none;
         list-style: none;
         z-index: 999999;
+
+
+        button {
+            font-size: 1rem;
+            cursor: pointer;
+            border-radius: 5px;
+            color: $mainbackground;
+            background-color: $secondarycolor;
+            padding: 5px;
+            border: none;
+            text-decoration: underline;
+        }
     }
 
 
@@ -86,6 +101,11 @@ nav {
         padding: 5px;
         border: none;
         text-decoration: underline;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+
     }
 
 }
@@ -97,16 +117,7 @@ nav {
 }
 
 
-button {
-    font-size: 1rem;
-    cursor: pointer;
-    border-radius: 5px;
-    color: $mainbackground;
-    background-color: $secondarycolor;
-    padding: 5px;
-    border: none;
-    text-decoration: underline;
-}
+
 
 .container {
     display: flex;
@@ -212,6 +223,14 @@ button {
 //     flex-direction: column;
 //     flex-wrap: wrap;
 // }
+
+
+.end {
+    font-family: "arial black";
+    font-size: 10rem;
+    color: $secondarycolor;
+}
+
 #starttext {
     display: flex;
     flex-direction: row;
@@ -310,6 +329,14 @@ button {
 
 /* -------------------------3D-LABORATORY------------------------------- */
 
+.perspectivewrapper {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    perspective: 500px;
+}
+
 #perspectiveattempt {
     display: flex;
     justify-content: center;
@@ -317,6 +344,19 @@ button {
     perspective: 1000px;
     width: 99vw;
     max-width: 100%;
+    // margin-bottom: -1.5rem;
+}
+
+.connector {
+    display: flex;
+    flex-direction: row;
+    // background-color: $creamcolor;
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-2.jpg);
+    background-position: center;
+    height: 10vh;
+    width: 30vw;
+    transform: rotateX(40deg);
+    transform-origin: center top; 
 }
 
 
@@ -329,21 +369,34 @@ button {
     text-align: left;
     border: 4px solid $secondarycolor;
     border-left: none;
+    padding: 1rem;
+    color: $secondarycolor;
 }
 
 #right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: rotateY(-45deg);
     transform-origin: center left;
     border: 4px solid $secondarycolor;
     border-left: none;
-
+    text-align: center;
+    font-size: 2rem;
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesign.jpg);
 }
 
 #left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: rotateY(45deg);
     transform-origin: center right;
     border: 4px solid $secondarycolor;
     border-left: none;
+    text-align: center;
+    font-size: 2rem;
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignLeft.jpg);
 }
 
 
@@ -362,30 +415,33 @@ button {
     transform: rotateY(180deg);
 }
 
-
 #accolades {
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 0 30vw;
-    height: 70vh;
-    border: 2px solid $secondarycolor;
+    padding: 1rem;
+    border: 4px solid $secondarycolor;
+    perspective: 500px;
+    margin-top: -2.5rem;
 
     .awards {
-        display: flex;
-        flex: row;
-    }
 
-    .award {
-        max-width: 100%;
-        transition: all ease 0.5s;
-        // border: 2px solid $secondarycolor;
-        padding: 1rem;
+        li {
+            transition: all 0.5s ease;
+            list-style-type: none;
+            font-size: 1.5rem;
 
 
-        &:hover {
-            transform: scale(1.1);
+            &:hover {
+                transform: scale(1.1);
+            }
         }
+
     }
+
+
 
 }
 
@@ -436,6 +492,11 @@ button {
     flex-direction: column;
 
 
+    img {
+        transform: scale(0.5);
+    }
+
+    ;
 
     h2,
     p,
@@ -454,73 +515,103 @@ button {
 
 #endingdesign {
     background-position: center;
-    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/BottomDesignnoWidth.jpg);
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/resized.jpg);
     background-repeat: no-repeat;
-    height: 60vh;
+    height: 30vh;
 }
 
-.square {
-    display: flex;
-    justify-content: center;
-    width: 200px;
-    height: 200px;
-    background-color: $creamcolor;
+.repsonsivehelper {
+    display: inherit;
+}
+
+.outerring1 {
+    width: 10vh;
+    height: 10vh;
+    border-radius: 50%;
+    border-left: 3px solid black;
+
+    // &:hover{
+    //     animation: outerringanim 1s ease forwards;
+    // }
+}
+
+.outerring2 {
+    width: 10vh;
+    height: 10vh;
+    border-radius: 50%;
+    border-right: 3px solid black;
+
+    // &:hover{
+    //     animation:  1s ease forwards;
+    // }
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 40vh;
+
+    button {
+        text-align: center;
+        height: 15vh;
+        width: 15vh;
+        border-radius: 50%;
+        transition: all 1s ease;
+        animation: none;
+        background-color: $secondarycolor;
+        z-index: 99999;
+        // transition: all ease;
+        background-size: 500% 500%;
+
+        a {
+            color: $creamcolor;
+            text-decoration: none;
+            z-index: 99999;
+        }
+
+
+        &:hover {
+            animation: hirebutton 1s ease forwards;
+        }
+    }
 }
 
 // ---------------------------------------------------------------------------------------------------
-// #maintextanim1 {
-//     color: $creamcolor;
-//     animation: maintextanim2 ease 2s;
-//     // animation-delay: 10s;
-//     // animation-iteration-count: infinite;
-//     perspective: 100cm;
-//     margin-right: 3rem;
-// }
 
-// @keyframes maintextanim2 {
-//     0% {}
+@keyframes hirebutton {
+    from {
+        // background-color: $secondarycolor;
+        transform: scale(1);
+        color: $secondarycolor;
+        border-color: $secondarycolor;
+        background-position: 0% 0%;
 
-//     25% {
-//         // transform: rotateX(180deg) rotateY(-180deg);
-//     }
 
-//     50% {
-//         transform: rotateY(50deg) rotateY(40deg);
-//     }
+    }
 
-//     100% {
-//         transform: rotateY(0deg) rotateY(0deg);
-//     }
-// }
+    to {
+        // background: repeating-linear-gradient(45deg, $mainbackground 0%, $ligtermainbackground 100%);
+        // border-color: $gold;
+        color: $gold;
+        transform: scale(1.5);
+        background-position: 100% 100%;
+    }
+}
 
-// .maintextanim2 {
-//     color: $creamcolor;
-//     animation: maintextanim1 ease 1s;
-//     // animation-delay: 10s;
-//     // animation-iteration-count: infinite;
-// }
+@keyframes slide {
+    0% {
+        background-position: 0% 0%;
+    }
 
-// #maintextanim3 {
-//     color: rgb(233, 216, 191);
-// }
+    50% {
+        background-position: 100% 100%;
+    }
 
-// @keyframes maintextanim1 {
-//     0% {}
-
-//     25% {
-//         // transform: rotateX(360deg);
-//     }
-
-//     50% {
-//         transform: rotateX(360deg);
-//     }
-
-//     100% {}
-// }
+    100% {
+        background-position: 0% 0%;
+    }
+}
 
 @keyframes spin {
     from {
@@ -529,16 +620,6 @@ footer {
 
     to {
         transform: rotateY(360deg);
-    }
-}
-
-@keyframes linespin {
-    // from {
-    //     transform: rotate(0deg);
-    // }
-
-    to {
-        transform: rotate(360deg);
     }
 }
 
@@ -552,7 +633,17 @@ footer {
     }
 }
 
+@keyframes outerringanim {
+    from {
+        transform: scale(1);
+        border-color: $secondarycolor;
+    }
 
+    to {
+        transform: scale(2);
+        border-color: $gold;
+    }
+}
 
 //   ------------------------------------------ MEDIA ------------------------------------------  
 @media (max-width: 768px) {
@@ -568,5 +659,9 @@ footer {
 
     h1 {
         font-size: 20vw;
+    }
+
+    .repsonsivehelper {
+        display: none;
     }
 }
