--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -12,12 +12,15 @@ body img {
   max-width: 100%;
 }
 
-#cursor {
-  position: absolute;
-  border: #D9B343 solid 1px;
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#cursor {
+  position: absolute;
+  border: #D9B343 solid 1px;
   position: fixed;
   flex-direction: initial;
   width: 90px;
@@ -101,9 +104,6 @@ nav a:hover {
 }
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   perspective: 500px;
   margin-bottom: 20vh;
@@ -252,12 +252,6 @@ nav a:hover {
   color: rgb(233, 216, 191);
 }
 
-#webdesignux {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #star {
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
   animation: glow 1.5s ease-in-out infinite alternate;
@@ -313,29 +307,23 @@ nav a:hover {
 }
 
 #right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transform: rotateY(-45deg);
   transform-origin: center left;
   border: 4px solid rgb(46, 46, 46);
   border-left: none;
   text-align: center;
   font-size: 2rem;
-  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesign.jpg);
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-1.jpg);
 }
 
 #left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transform: rotateY(45deg);
   transform-origin: center right;
   border: 4px solid rgb(46, 46, 46);
   border-left: none;
   text-align: center;
   font-size: 2rem;
-  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignLeft.jpg);
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-1.jpg);
 }
 
 #designbar,
@@ -391,12 +379,9 @@ nav a:hover {
 }
 
 .windowwrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   perspective: 400px;
   width: 100vw;
-  height: 100ch;
+  height: 100vh;
   background-color: rgb(46, 46, 46);
 }
 .windowwrapper .window {
@@ -404,12 +389,13 @@ nav a:hover {
   width: 10vw;
   height: 10vh;
 }
+.windowwrapper .window h3 {
+  color: rgb(230, 104, 82);
+  text-align: center;
+}
 
 .post {
   background-color: rgb(46, 46, 46);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
 .post img {
