--- a/wp-content/themes/johns/styles/_main.scss
+++ b/wp-content/themes/johns/styles/_main.scss
@@ -15,12 +15,15 @@ body {
     }
 }
 
-#cursor {
-    position: absolute;
-    border: #D9B343 solid 1px;
+.center{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#cursor {
+    position: absolute;
+    border: #D9B343 solid 1px;
     position: fixed;
     flex-direction: initial;
     width: 90px;
@@ -120,9 +123,6 @@ nav {
 
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     perspective: 500px;
     margin-bottom: 20vh;
@@ -309,12 +309,6 @@ nav {
 
 }
 
-#webdesignux {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 #star {
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.7), 0 0 10px rgba(255, 255, 255, 0.5);
     animation: glow 1.5s ease-in-out infinite alternate;
@@ -374,29 +368,23 @@ nav {
 }
 
 #right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     transform: rotateY(-45deg);
     transform-origin: center left;
     border: 4px solid $secondarycolor;
     border-left: none;
     text-align: center;
     font-size: 2rem;
-    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesign.jpg);
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-1.jpg);
 }
 
 #left {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     transform: rotateY(45deg);
     transform-origin: center right;
     border: 4px solid $secondarycolor;
     border-left: none;
     text-align: center;
     font-size: 2rem;
-    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignLeft.jpg);
+    background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/GridDesignNew-1.jpg);
 }
 
 
@@ -469,26 +457,24 @@ nav {
 }
 
 .windowwrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     perspective: 400px;
     width: 100vw;
-    height: 100ch;
+    height: 100vh;
     background-color: $secondarycolor;
 
     .window {
         border: 10px solid $creamcolor;
         width: 10vw;
         height: 10vh;
+        h3{
+            color: $mainbackground;
+            text-align: center;
+        }
     }
 }
 
 .post {
     background-color: $secondarycolor;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 
 
