--- a/wp-content/themes/johns/styles/_main.scss
+++ b/wp-content/themes/johns/styles/_main.scss
@@ -21,6 +21,24 @@ body {
     align-items: center;
 }
 
+.progressbarcontainer{
+    z-index: 9999;
+    width: 85%;
+    top: 0;
+    position: sticky;
+}
+
+    .progress-bar {
+        position: relative;
+        top: 0;
+        color: red;
+        height: 5px;
+        width: 1px;
+        background-color: red;
+        z-index: 99999;
+    }
+
+
 #cursor {
     position: absolute;
     border: #D9B343 solid 1px;
@@ -74,7 +92,7 @@ nav {
     z-index: 999999;
 
 
-    ul {
+    .sendbuttons {
         display: flex;
         justify-content: space-evenly;
         flex-direction: row;
@@ -314,12 +332,7 @@ nav {
     animation: glow 1.5s ease-in-out infinite alternate;
 }
 
-.progress-bar {
-    color: red;
-    height: 5px;
-    width: 0;
-    background-color: red;
-}
+
 
 /* -------------------------3D-LABORATORY------------------------------- */
 
@@ -413,6 +426,7 @@ nav {
     border: 4px solid $secondarycolor;
     perspective: 500px;
     margin-top: -2.5rem;
+    font-size: 2rem;
 
     .awards {
 
@@ -436,17 +450,19 @@ nav {
 
 .horizontalscrollwrapper {
     width: 100%;
+    background: linear-gradient(45deg, rgb(233, 216, 191), rgb(173, 216, 230), rgb(46, 46, 46));
+    background-size: 300% 300%;
+    animation: slide 10s linear infinite;
 
     .horizontalscroll {
         width: 100%;
         display: flex;
         flex-direction: row;
 
-
         h2 {
             text-align: left;
             font-size: 10rem;
-            padding: 10rem;
+            padding: 5rem;
         }
     }
 }
@@ -458,7 +474,7 @@ nav {
 
 .windowwrapper {
     perspective: 400px;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: $secondarycolor;
 
@@ -476,20 +492,28 @@ nav {
 .post {
     background-color: $secondarycolor;
     flex-direction: column;
+    padding-bottom: 3rem;
 
 
-    img {
-        transform: scale(0.5);
-    }
+    // img {
+    //     transform: scale(0.5);
+    // }
 
     ;
 
-    h2,
-    p,
-    a {
+    h2{
         color: $mainbackground;
         text-align: center;
         text-decoration: none;
+    }
+
+    p{
+        color: $mainbackground;
+        text-align: left;
+        text-decoration: none;
+        margin: 0 30vw;
+        padding-bottom: 1rem;
+        // border-left: 1px $creamcolor solid;
     }
 
 
@@ -538,7 +562,7 @@ footer {
     align-items: center;
     height: 40vh;
 
-    button {
+    #hirebutton {
         text-align: center;
         height: 15vh;
         width: 15vh;
@@ -598,6 +622,7 @@ footer {
         background-position: 0% 0%;
     }
 }
+
 
 @keyframes spin {
     from {
