Added html comments

--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -373,9 +373,9 @@ nav a:hover {
 
 .horizontalscrollwrapper {
   width: 100%;
-  background: linear-gradient(45deg, rgb(233, 216, 191), rgb(173, 216, 230), rgb(46, 46, 46));
+  background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
   background-size: 300% 300%;
-  animation: slide 10s linear infinite;
+  animation: slide 5s linear infinite;
 }
 .horizontalscrollwrapper .horizontalscroll {
   width: 100%;
@@ -413,7 +413,12 @@ nav a:hover {
   flex-direction: column;
   padding-bottom: 3rem;
 }
+.post img {
+  border-radius: 12px;
+}
 .post h2 {
+  display: flex;
+  flex-wrap: wrap;
   color: rgb(230, 104, 82);
   text-align: center;
   text-decoration: none;
