Removed JS markers and improved responsiveness with mediaqueries

--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -47,7 +47,7 @@ body img {
   -webkit-backdrop-filter: blur(0.5px);
           backdrop-filter: blur(0.5px);
   pointer-events: none;
-  z-index: 99999;
+  z-index: 999999;
 }
 #cursor #cursor-wrapper {
   position: fixed;
@@ -434,13 +434,6 @@ nav a:hover {
   transform: scale(5);
 }
 
-#endingdesign {
-  background-position: center;
-  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/resized.jpg);
-  background-repeat: no-repeat;
-  height: 30vh;
-}
-
 .repsonsivehelper {
   display: inherit;
 }
@@ -463,9 +456,17 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40vh;
+  flex-direction: column;
+  z-index: 9999;
 }
-footer #hirebutton {
+footer .ringsandbutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 3rem;
+}
+footer .ringsandbutton #hirebutton {
   text-align: center;
   height: 15vh;
   width: 15vh;
@@ -473,16 +474,25 @@ footer #hirebutton {
   transition: all 1s ease;
   animation: none;
   background-color: rgb(46, 46, 46);
-  z-index: 99999;
+  z-index: 9999;
   background-size: 500% 500%;
 }
-footer #hirebutton a {
+footer .ringsandbutton #hirebutton a {
   color: rgb(233, 216, 191);
   text-decoration: none;
-  z-index: 99999;
+  z-index: 9999;
 }
-footer #hirebutton:hover {
+footer .ringsandbutton #hirebutton:hover {
   animation: hirebutton 1s ease forwards;
+}
+footer #endingdesign {
+  margin-top: 3rem;
+  background-position: center;
+  background-image: url(http://localhost:8080/wordpresstest/wp-content/uploads/2025/01/resized.jpg);
+  background-repeat: no-repeat;
+  height: 30vh;
+  width: 100%;
+  z-index: 99999;
 }
 
 @keyframes hirebutton {
@@ -536,6 +546,13 @@ footer #hirebutton:hover {
   }
 }
 @media (max-width: 768px) {
+  .post p {
+    margin: 0 20vw;
+  }
+  .window {
+    width: 15vw;
+    height: 15vw;
+  }
   #star {
     display: none;
   }
@@ -544,9 +561,25 @@ footer #hirebutton:hover {
     gap: 0;
   }
   h1 {
-    font-size: 20vw;
+    font-size: 15vw;
+  }
+  .end {
+    font-size: 15vw;
   }
   .repsonsivehelper {
     display: none;
+  }
+  .hirebutton {
+    width: 10vh;
+    height: 10vh;
+  }
+  #middle {
+    width: 40vw;
+  }
+  #accolades {
+    margin: 0 15vw;
+  }
+  footer #endingdesign {
+    background-size: cover;
   }
 }/*# sourceMappingURL=style.css.map */
