--- a/wp-content/themes/johns/styles/_fontandcolors.scss
+++ b/wp-content/themes/johns/styles/_fontandcolors.scss
@@ -1,3 +1,5 @@
+$darkerbackground: rgb(194, 78, 57);
+
 $mainbackground: rgb(230, 104, 82);
 
 $ligtermainbackground: rgb(235, 107, 84); 
@@ -8,5 +10,6 @@ $mainfont: 'arial black';
 
 $creamcolor: rgb(233, 216, 191);
 
-$gold: #D9B343
+$gold: #D9B343;
 
+$stolenfisherfriends: rgb(126,226,196);
