--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -18,23 +18,6 @@ body img {
   align-items: center;
 }
 
-.progressbarcontainer {
-  z-index: 9999;
-  width: 85%;
-  top: 0;
-  position: sticky;
-}
-
-.progress-bar {
-  position: relative;
-  top: 0;
-  color: red;
-  height: 5px;
-  width: 1px;
-  background-color: red;
-  z-index: 99999;
-}
-
 #cursor {
   position: absolute;
   border: #D9B343 solid 1px;
@@ -206,30 +189,6 @@ nav a:hover {
   justify-content: center;
   flex-wrap: wrap;
   gap: 2em;
-  /* #c{
-
-  }
-  .r{
-
-  }
-  .e{
-
-  }
-  #a{
-
-  }
-  #t{
-
-  }
-  .i{
-
-  }
-  #v{
-
-  }
-  .e{
-
-  } */
   /* #d{
 
   }
@@ -356,7 +315,7 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   margin: 0 30vw;
-  padding: 1rem;
+  padding: 2rem;
   border: 4px solid rgb(46, 46, 46);
   perspective: 500px;
   margin-top: -2.5rem;
@@ -366,6 +325,7 @@ nav a:hover {
   transition: all 0.5s ease;
   list-style-type: none;
   font-size: 1.5rem;
+  border: 1px solid rgb(46, 46, 46);
 }
 #accolades .awards li:hover {
   transform: scale(1.1);
@@ -386,6 +346,46 @@ nav a:hover {
   text-align: left;
   font-size: 10rem;
   padding: 5rem;
+}
+
+#scrolltextwrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
+  background-color: #f6f5f3;
+}
+#scrolltextwrapper h3 {
+  font-size: 8rem;
+  text-align: center;
+  color: rgb(126, 226, 196);
+}
+#scrolltextwrapper .scrollingtextright {
+  animation: textright 15s ease infinite forwards;
+  white-space: nowrap;
+}
+#scrolltextwrapper .scrollingtextright2 {
+  animation: textright2 17s ease infinite forwards;
+  white-space: nowrap;
+}
+#scrolltextwrapper .scrollingtextleft {
+  animation: textleft 20s ease infinite forwards;
+  white-space: nowrap;
+}
+#scrolltextwrapper .scrollingtextimage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 9999;
+  right: 50%;
+  left: 50%;
+}
+#scrolltextwrapper .scrollingtextimage img {
+  width: 100%;
+  height: 100%;
 }
 
 .spacemaker {
@@ -543,6 +543,39 @@ footer #endingdesign {
   to {
     transform: scale(2);
     border-color: #D9B343;
+  }
+}
+@keyframes textright {
+  0% {
+    transform: translateX(-10vw);
+  }
+  50% {
+    transform: translateX(50vw);
+  }
+  100% {
+    transform: translateX(-10vw);
+  }
+}
+@keyframes textright2 {
+  0% {
+    transform: translateX(-10vw);
+  }
+  50% {
+    transform: translateX(50vw);
+  }
+  100% {
+    transform: translateX(-10vw);
+  }
+}
+@keyframes textleft {
+  0% {
+    transform: translateX(10vw);
+  }
+  50% {
+    transform: translateX(-50vw);
+  }
+  100% {
+    transform: translateX(10vw);
   }
 }
 @media (max-width: 768px) {
