--- a/wp-content/themes/johns/style.css
+++ b/wp-content/themes/johns/style.css
@@ -333,9 +333,7 @@ nav a:hover {
 
 .horizontalscrollwrapper {
   width: 100%;
-  background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
-  background-size: 300% 300%;
-  animation: slide 5s linear infinite;
+  background-color: rgb(233, 216, 191);
 }
 .horizontalscrollwrapper .horizontalscroll {
   width: 100%;
@@ -355,12 +353,14 @@ nav a:hover {
   height: 100vh;
   width: 100%;
   overflow-x: hidden;
-  background-color: #f6f5f3;
+  background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
+  background-size: 300% 300%;
+  animation: slide 5s linear infinite;
 }
 #scrolltextwrapper h3 {
   font-size: 8rem;
   text-align: center;
-  color: rgb(126, 226, 196);
+  color: rgb(46, 46, 46);
 }
 #scrolltextwrapper .scrollingtextright {
   animation: textright 15s ease infinite forwards;
@@ -375,6 +375,8 @@ nav a:hover {
   white-space: nowrap;
 }
 #scrolltextwrapper .scrollingtextimage {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
