--- a/wp-content/themes/johns/styles/_main.scss
+++ b/wp-content/themes/johns/styles/_main.scss
@@ -427,9 +427,10 @@ nav {
 
 .horizontalscrollwrapper {
     width: 100%;
-    background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
-    background-size: 300% 300%;
-    animation: slide 5s linear infinite;
+    // background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
+    // background-size: 300% 300%;
+    // animation: slide 5s linear infinite;
+    background-color: $creamcolor;
 
     .horizontalscroll {
         width: 100%;
@@ -453,12 +454,14 @@ nav {
     height: 100vh;
     width: 100%;
     overflow-x: hidden;
-    background-color: #f6f5f3;
+    background: linear-gradient(45deg, rgb(233, 216, 191), rgb(172, 192, 199), rgb(46, 46, 46));
+    background-size: 300% 300%;
+    animation: slide 5s linear infinite;
 
     h3 {
         font-size: 8rem;
         text-align: center;
-        color: $stolenfisherfriends
+        color: $secondarycolor;
     }
 
     .scrollingtextright {
@@ -484,6 +487,8 @@ nav {
     }
 
     .scrollingtextimage {
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -491,6 +496,7 @@ nav {
         z-index: 9999;
         right: 50%;
         left: 50%;
+
         img{
             width: 100%;
             height: 100%;
